--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/92b8c3a44a.js" crossorigin="anonymous"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
 </head>
 
 <body>
