--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <!--</div>-->
     </nav>
 
-    <article class="container mt-3">
-
+    <div class="container mt-3">
         <!-- Promotion -->
         <div class="row d-none d-sm-block">
             <div class="col-12">
@@ -93,9 +92,10 @@
                 </section>
             </div>
         </div>
-        <hr>
+    </div>
 
-        <!-- Quotes -->
+    <!-- Quotes -->
+    <div class="container quotes-container">
         <section class="quotes">
             <div class="row">
                 <div class="col-12 my-5">
@@ -135,9 +135,10 @@
                 </div>
             </div>
         </section>
-        <hr>
+    </div>
 
-        <!-- Features -->
+    <!-- Features -->
+    <div class="container features-container">
         <section class="features">
             <div class="row">
                 <div class="col-12 my-5">
@@ -185,9 +186,7 @@
                 </div>
             </div>
         </section>
-        <hr>
-
-    </article>
+    </div>
 
     <!-- Modal -->
     <div class="modal" tabindex="-1" role="dialog" id="signUpModal">
