--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!--</div>-->
     </nav>
 
-    <div class="container mt-3">
+    <div class="container alert-container">
         <!-- Promotion -->
         <div class="row d-none d-sm-block">
             <div class="col-12">
@@ -73,8 +73,10 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- Callout -->
+    <!-- Callout -->
+    <div class="container callout-container">
         <div class="row">
             <div class="col-12">
                 <section class="callout jumbotron text-center">
@@ -93,6 +95,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Quotes -->
     <div class="container quotes-container">
