--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
     <!-- Callout -->
     <div class="container-fluid callout-container">
+        <div class="opaque-overlay">&nbsp;</div>
         <div class="row">
             <div class="col-12">
 
