--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
     <!-- Quotes -->
-    <div class="container quotes-container">
+    <div class="container quotes-container content-container">
         <section class="quotes">
             <div class="row">
                 <div class="col-12 page-header">
@@ -148,7 +148,7 @@
     </div>
 
     <!-- Features -->
-    <div class="container features-container">
+    <div class="container features-container content-container">
         <section class="features">
             <div class="row">
                 <div class="col-12 page-header">
