--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <!-- Promotion -->
             <div class="row d-none d-sm-block">
                 <div class="col-12">
-                    <div class="site-wide-alert alert alert-warning"><strong>Sale Now On!</strong> We've got a sale on. Get a 12-month
+                    <div class="site-wide-alert alert alert-warning"><strong>Sale Now On!</strong> We've got a sale on.
+                        Get a 12-month
                         subscription for the price of 6! <a href="/">See here for details!</a>
                     </div>
                 </div>
@@ -104,98 +105,102 @@
 
 
     <!-- Quotes -->
-    <div class="container quotes-container content-container">
-        <section class="quotes">
-            <div class="row">
-                <div class="col-12 page-header">
-                    <h2 class="text-uppercase">Quotes:</h2>
+    <div class="container-wrapper">
+        <div class="container quotes-container content-container">
+            <section class="quotes">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Quotes:</h2>
+                    </div>
+                    <hr class="block-divider block-divider--short">
                 </div>
-                <hr class="block-divider block-divider--short">
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="media">
-                        <div class="d-none d-sm-block">
-                            <img src="assets/images/girl-image.png" alt="image of a woman" class="rounded-circle mr-3"
-                                height="100" width="100">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="assets/images/girl-image.png" alt="image of a woman"
+                                    class="rounded-circle mr-3" height="100" width="100">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I've been introduced to more than 10 great international whiskeys I never knew
+                                        about!
+                                    </p>
+                                    <p>- Jane Doe</p>
+                                </blockquote>
+                            </div>
                         </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>I've been introduced to more than 10 great international whiskeys I never knew
-                                    about!
-                                </p>
-                                <p>- Jane Doe</p>
-                            </blockquote>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="assets/images/guy-image.png" alt="image of a man" class="rounded-circle mr-3"
+                                    height="100" width="100">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I haven't been sober for months!</p>
+                                    <p>- John Smith</p>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="media">
-                        <div class="d-none d-sm-block">
-                            <img src="assets/images/guy-image.png" alt="image of a man" class="rounded-circle mr-3"
-                                height="100" width="100">
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>I haven't been sober for months!</p>
-                                <p>- John Smith</p>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </div>
 
     <!-- Features -->
-    <div class="container features-container content-container">
-        <section class="features">
-            <div class="row">
-                <div class="col-12 page-header">
-                    <h2 class="text-uppercase">Features:</h2>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fa-solid fa-gifts d-none d-sm-inline"></i> Feature 1 <span
-                                class="badge badge-success">NEW!</span></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium,
-                            fugiat
-                            similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis
-                            est!
-                            Atque
-                            quasi iure dolorum reprehenderit consequatur.</p>
-                        <p><a class="btn btn-sm btn-light">Read More</a></p>
+    <div class="container-wrapper container-wrapper--red">
+        <div class="container features-container content-container">
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Features:</h2>
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fa-solid fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur
-                            cupiditate!
-                            Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
-                            repellendus
-                            cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
-                        <p><a class="btn btn-sm btn-light">Read More</a></p>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fa-solid fa-gifts d-none d-sm-inline"></i> Feature 1 <span
+                                    class="badge badge-success">NEW!</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium,
+                                fugiat
+                                similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis
+                                est!
+                                Atque
+                                quasi iure dolorum reprehenderit consequatur.</p>
+                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fa-solid fa-circle-xmark d-none d-sm-line"></i> Feature 3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
-                            doloremque
-                            corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
-                            impedit
-                            autem ipsum quod harum.</p>
-                        <p><a class="btn btn-sm btn-light">Read More</a></p>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fa-solid fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur
+                                cupiditate!
+                                Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
+                                repellendus
+                                cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
+                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 d-md-none d-lg-block col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fa-solid fa-circle-xmark d-none d-sm-line"></i> Feature 3</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
+                                doloremque
+                                corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
+                                impedit
+                                autem ipsum quod harum.</p>
+                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </div>
 
     <!-- Modal -->
