--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="feature">
-                            <h3><i class="fa-solid fa-gifts d-none d-sm-inline"></i> Feature 1 <span
+                            <h3><i class="fa-solid fa-gifts d-none d-sm-block"></i> Feature 1 <span
                                     class="badge badge-success">NEW!</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium,
                                 fugiat
@@ -178,7 +178,7 @@
 
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="feature">
-                            <h3><i class="fa-solid fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+                            <h3><i class="fa-solid fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur
                                 cupiditate!
                                 Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
@@ -190,7 +190,7 @@
 
                     <div class="col-12 d-md-none d-lg-block col-lg-4">
                         <div class="feature">
-                            <h3><i class="fa-solid fa-circle-xmark d-none d-sm-line"></i> Feature 3</h3>
+                            <h3><i class="fa-solid fa-circle-xmark d-none d-sm-block"></i> Feature 3</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
                                 doloremque
                                 corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
